# MagicBox

./: .gitignore  Cargo.toml  README.md
MagiCase/: 1_body.par  2_cover.par
construction/: 1_2_3_4_5_mb_case.par  1_2_3_mb_case.par  1_top_plate.par  2_base_plate.par  2_outer_shell.par  2_outter_shell.par  3_button_cap.par  4_left_opening.par  5_battery_clamp.par  6_module_clamp.par  7a_button1.par  7b_button2.par  7c_button3.par  7d_buttonS.par  a_magicbox.asm  a_magicbox.cfg  components.dft
construction/stl/: 1_top_plate.stl  2_outer_shell.stl  3_button_cap.stl  4_left_opening.stl  5_battery_clamp.stl  6_module_clamp.stl
documentation/: hardware_reference.md  project_log.md
documentation/sketches/: magicbox_case.blend
electronics/: MagicBox.kicad_pro  MagicBox.kicad_sch
magicbox/: magicbox.cpp  magicbox.hpp  magicbox.ino
src/: lib.rs
