[package]
name = "magicbox_mk1"
authors = [ "Samuel Nösslböck <samuel.noesslboeck@gmail.com>" ]
description = "A controller that can be connected via serial interface for basic movement instructions"
version = "0.1.0"
edition = "2021"

[lib]
name = "magicbox"
path = "src/lib.rs"

[[bin]]
name = "controller"
path = "bin/controller.rs"

[[bin]]
name = "server" 
path = "bin/server.rs"

[dependencies]
clap = { version = "4.3.11", features = [ "derive", "cargo" ] }

[dev-dependencies]
syiot = { path = "../../Libraries/syiot" }
